apps/kubernetes/k3s/apps/immich/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.hughboi.vip`)
      kind: Rule
      services:
        - name: immich-server
          port: 2283
  tls:
    secretName: hughboi-tls
